# colored-sphere-tracking

./: .gitignore  CMakeLists.txt  README.md  config.ini  model-example.ini
models/: flypi.ini
src/: Helper.h  Measurement.h  Pose.h  PoseEstimator.h  Sphere.h  SphereDetector.h  SphereFilters.h  Tracker.cpp  helper.h  main.cpp
src/tracker/: CircleDetector.h  Colors.h  Helper.h  LikelihoodFilter.h  Measurement.h  Pose.h  PoseEstimator.h  Rotation.h  Sphere.h  SphereDetector.h  SphereFilters.h
